structural changes, but to be debugged (I/O schema needs to be updated): 1. hide loader details to their managers 2. implemented the geometric interpolation

--- a/rmds.ipynb
+++ b/rmds.ipynb
@@ -6,56 +6,31 @@
    "source": [
     "## The Risk Measure DataSet generation engine codebase\n",
     "\n",
-    "This engine contains the following key components:\n",
+    "This engine contains the following key components (these are *the* prompts used for ChatGPT!):\n",
     "\n",
     "1.\tFirst, a *singleton* object, *CurveManager*, that contains a list of curves identifiable by name and date. Each curve is a specialization of an abstract Curve class and the simplest of which has a vector of double values itemized by dates and when the object is called with a date, an interpolated value is returned. \n",
     "\n",
     "2.\tSecond, a singleton object, *ScenarioManager*, that contains a list of market scenarios identifiable by name and date. Each scenario is constructed by taking the complete list of curves from the CurveManager as the BASE, and perturb each curve up and down in a certain fashion, so that the scenario will contain three lists of the curves: the BASE, the UP perturbed, and the DOWN perturbed.\n",
+    "\n",
     "3.\tThirdly, a singleton object, *SecurityManager*, that contains a list of financial securities identifiable by an id. Each security is a specialization of an abstract class Security, constructed from a dictionary of <attribute, value>, and has a function, NPV, that takes a scenario object and returns a value.\n",
+    "\n",
     "4.\tLast, a generic function that iterates through each security from the SecurityManager and each scenario from the ScenarioManager, and call the security's NPV function three times to obtain three values for each the perturbations contained in the scenario. The three values are then pushed into a data store with all the relevant identifiers.\n",
+    "\n",
     "5.\tPiecing them together is a workflow manager, or *task dispatcher*, to use this code base: it takes a JSON document as a configuration input that instructs about where all the input files such as curve definition and security definition and the scenario definition are located, and indicates what use case the job is tasked with, then it will first pre-process the inputs and construct the three containers, CurveManager, ScenarioManager, and SecurityManager, and dispatch the workflow to the relevant use case. At the end, output the result in the data store to a CSV file.\n",
+    "\n",
     "6.\tAnd one more item and most important to complete the picture: *info logging*! we now need a logger through the code so that each step is logged and if there is any exception, error messages are captured into the log. \n",
     "\n",
-    "This file is the workflow manager, the *main()* function."
+    "This file is the *architectural design master* document, also the POC."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from scipy.interpolate import interp1d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 9\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtyping\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Dict, Union, List, Optional, Tuple\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mscipy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01minterpolate\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m interp1d\n\u001b[1;32m----> 9\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;66;03m# Configure logging\u001b[39;00m\n\u001b[0;32m     13\u001b[0m logging\u001b[38;5;241m.\u001b[39mbasicConfig(\n\u001b[0;32m     14\u001b[0m     filename\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtask_dispatcher.log\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m     15\u001b[0m     filemode\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124ma\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m     16\u001b[0m     \u001b[38;5;28mformat\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m%(asctime)s\u001b[39;00m\u001b[38;5;124m - \u001b[39m\u001b[38;5;132;01m%(levelname)s\u001b[39;00m\u001b[38;5;124m - \u001b[39m\u001b[38;5;132;01m%(message)s\u001b[39;00m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m     17\u001b[0m     level\u001b[38;5;241m=\u001b[39mlogging\u001b[38;5;241m.\u001b[39mINFO,\n\u001b[0;32m     18\u001b[0m )\n",
-      "Cell \u001b[1;32mIn[1], line 9\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtyping\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Dict, Union, List, Optional, Tuple\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mscipy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01minterpolate\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m interp1d\n\u001b[1;32m----> 9\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;66;03m# Configure logging\u001b[39;00m\n\u001b[0;32m     13\u001b[0m logging\u001b[38;5;241m.\u001b[39mbasicConfig(\n\u001b[0;32m     14\u001b[0m     filename\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtask_dispatcher.log\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m     15\u001b[0m     filemode\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124ma\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m     16\u001b[0m     \u001b[38;5;28mformat\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m%(asctime)s\u001b[39;00m\u001b[38;5;124m - \u001b[39m\u001b[38;5;132;01m%(levelname)s\u001b[39;00m\u001b[38;5;124m - \u001b[39m\u001b[38;5;132;01m%(message)s\u001b[39;00m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m     17\u001b[0m     level\u001b[38;5;241m=\u001b[39mlogging\u001b[38;5;241m.\u001b[39mINFO,\n\u001b[0;32m     18\u001b[0m )\n",
-      "File \u001b[1;32m_pydevd_bundle/pydevd_cython.pyx:1457\u001b[0m, in \u001b[0;36m_pydevd_bundle.pydevd_cython.SafeCallWrapper.__call__\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32m_pydevd_bundle/pydevd_cython.pyx:701\u001b[0m, in \u001b[0;36m_pydevd_bundle.pydevd_cython.PyDBFrame.trace_dispatch\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32m_pydevd_bundle/pydevd_cython.pyx:1395\u001b[0m, in \u001b[0;36m_pydevd_bundle.pydevd_cython.PyDBFrame.trace_dispatch\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32m_pydevd_bundle/pydevd_cython.pyx:1344\u001b[0m, in \u001b[0;36m_pydevd_bundle.pydevd_cython.PyDBFrame.trace_dispatch\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32m_pydevd_bundle/pydevd_cython.pyx:312\u001b[0m, in \u001b[0;36m_pydevd_bundle.pydevd_cython.PyDBFrame.do_wait_suspend\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mc:\\dev\\Python\\.venv\\Lib\\site-packages\\debugpy\\_vendored\\pydevd\\pydevd.py:2070\u001b[0m, in \u001b[0;36mPyDB.do_wait_suspend\u001b[1;34m(self, thread, frame, event, arg, exception_type)\u001b[0m\n\u001b[0;32m   2067\u001b[0m             from_this_thread\u001b[38;5;241m.\u001b[39mappend(frame_custom_thread_id)\n\u001b[0;32m   2069\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_threads_suspended_single_notification\u001b[38;5;241m.\u001b[39mnotify_thread_suspended(thread_id, thread, stop_reason):\n\u001b[1;32m-> 2070\u001b[0m         keep_suspended \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_do_wait_suspend\u001b[49m\u001b[43m(\u001b[49m\u001b[43mthread\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mframe\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mevent\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43marg\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msuspend_type\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfrom_this_thread\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mframes_tracker\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   2072\u001b[0m frames_list \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m   2074\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m keep_suspended:\n\u001b[0;32m   2075\u001b[0m     \u001b[38;5;66;03m# This means that we should pause again after a set next statement.\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\dev\\Python\\.venv\\Lib\\site-packages\\debugpy\\_vendored\\pydevd\\pydevd.py:2106\u001b[0m, in \u001b[0;36mPyDB._do_wait_suspend\u001b[1;34m(self, thread, frame, event, arg, suspend_type, from_this_thread, frames_tracker)\u001b[0m\n\u001b[0;32m   2103\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_call_input_hook()\n\u001b[0;32m   2105\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mprocess_internal_commands()\n\u001b[1;32m-> 2106\u001b[0m     time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;241m0.01\u001b[39m)\n\u001b[0;32m   2108\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcancel_async_evaluation(get_current_thread_id(thread), \u001b[38;5;28mstr\u001b[39m(\u001b[38;5;28mid\u001b[39m(frame)))\n\u001b[0;32m   2110\u001b[0m \u001b[38;5;66;03m# process any stepping instructions\u001b[39;00m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
-   "source": [
     "# python\n",
+    "from ast import Pow\n",
     "import logging\n",
     "import json\n",
     "import pandas as pd # type: ignore\n",
@@ -65,17 +40,21 @@
     "from scipy.interpolate import interp1d\n",
     "import numpy as np\n",
     "import csv\n",
+    "import bisect\n",
+    "import sys\n",
     "\n",
     "# Configure logging\n",
+    "''' disable file logging for now\n",
     "logging.basicConfig(\n",
     "    filename=\"task_dispatcher.log\",\n",
     "    filemode=\"a\",\n",
     "    format=\"%(asctime)s - %(levelname)s - %(message)s\",\n",
     "    level=logging.INFO,\n",
     ")\n",
+    "'''\n",
+    "logging.basicConfig(stream=sys.stdout, level=logging.INFO, format='%(asctime)s %(levelname)s %(name)s %(process)d: %(message)s')\n",
     "\n",
     "# Abstract Classes and Singleton Managers\n",
-    "\n",
     "class Curve:\n",
     "    \"\"\"Abstract base class for a curve.\"\"\"\n",
     "    def __init__(self, name: str, dates: List[datetime], values: List[float]):\n",
@@ -87,7 +66,6 @@
     "    def get_value(self, date: datetime) -> float:\n",
     "        pass\n",
     "\n",
-    "\n",
     "class SimpleCurve(Curve):\n",
     "    \"\"\"A simple curve with linear interpolation.\"\"\"\n",
     "    def __init__(self, dates: int, values: float):\n",
@@ -95,8 +73,30 @@
     "        self.values = np.array(values)\n",
     "        self.interpolator = interp1d(self.dates.astype(int), self.values, kind='linear', fill_value=\"extrapolate\")\n",
     "\n",
+    "    def geometric_interp(self, date: int) -> float:\n",
+    "        # find the right point\n",
+    "        idx = bisect.bisect_left(self.dates, date)\n",
+    "\n",
+    "        # init the two bounding points for interpolation \n",
+    "        t0, t1 = self.dates[0], self.dates[1] \n",
+    "        v0, v1 = self.values[0], self.values[1] \n",
+    "        #handle edge case: flat, or extrapolate\n",
+    "        if idx == 0:    #do not extrapolate leftward \n",
+    "            return v0\n",
+    "        elif idx == len(self.dates):    #extrapolate using the last two points\n",
+    "            t0, t1 = self.dates[-2], self.dates[-1] \n",
+    "            v0, v1 = self.values[-2], self.values[-1] \n",
+    "\n",
+    "        # otherwise\n",
+    "        t0, t1 = self.dates[idx - 1], self.dates[idx] \n",
+    "        v0, v1 = self.values[idx - 1], self.values[idx] \n",
+    "\n",
+    "        e = float((date - t0) / (t1 - t0))\n",
+    "        # Perform geometric interpolation \n",
+    "        return v0 * pow((v1 / v0), e)\n",
+    "\n",
     "    def get_value(self, date: int) -> float:\n",
-    "        return self.interpolator(date)\n",
+    "        return self.geometric_interp(date) # self.interpolator(date)\n",
     "\n",
     "class CurveManager:\n",
     "    \"\"\"Singleton class managing curves.\"\"\"\n",
@@ -107,6 +107,9 @@
     "            cls._instance = super(CurveManager, cls).__new__(cls)\n",
     "            cls._instance.curves = {}\n",
     "        return cls._instance\n",
+    "\n",
+    "    def set_valuation_date(self, valuation_date):\n",
+    "        self.valuation_date = valuation_date\n",
     "\n",
     "    def load_curves(self, curve_file):\n",
     "        curves_data = pd.read_csv(curve_file)\n",
@@ -188,6 +191,9 @@
     "            cls._instance.scenarios = {}\n",
     "        return cls._instance\n",
     "\n",
+    "    def set_valuation_date(self, valuation_date):\n",
+    "        self.valuation_date = valuation_date\n",
+    "\n",
     "    def create_scenario(self, name: str, date: datetime):\n",
     "        curve_manager = CurveManager()\n",
     "        base_curves = curve_manager.curves\n",
@@ -195,6 +201,10 @@
     "        self.scenarios[(name, date)] = scenario\n",
     "        logging.info(f\"Created scenario: {name} on {date}\")\n",
     "\n",
+    "    def load_scenarios(self, scenario_file):\n",
+    "        # just the BASE for now\n",
+    "        # scenarios_data = pd.read_csv(scenario_file)\n",
+    "        self.create_scenario(\"BASE\", self.valuation_date)\n",
     "\n",
     "class Security(ABC):\n",
     "    \"\"\"Abstract class for a financial security.\"\"\"\n",
@@ -234,13 +244,26 @@
     "            cls._instance.securities = {}\n",
     "        return cls._instance\n",
     "\n",
+    "    def set_valuation_date(self, valuation_date):\n",
+    "        self.valuation_date = valuation_date\n",
+    "\n",
     "    def add_security(self, security: Security):\n",
     "        self.securities[security.security_id] = security\n",
     "        logging.info(f\"Added security: {security.security_id}\")\n",
     "\n",
+    "    def load_securities(self, security_file):\n",
+    "        securities_data = pd.read_csv(security_file)\n",
+    "        for _, row in securities_data.iterrows():\n",
+    "            attributes = {\n",
+    "                \"curve_name\": row[\"curve_name\"],\n",
+    "                \"cash_flows\": [\n",
+    "                    (datetime.strptime(d, \"%Y-%m-%d\"), float(a))\n",
+    "                    for d, a in zip(row[\"cash_flow_dates\"].split(\";\"), row[\"cash_flow_amounts\"].split(\";\"))\n",
+    "                ]\n",
+    "            }\n",
+    "            self.add_security(Bond(security_id=row[\"security_id\"], attributes=attributes))\n",
     "\n",
     "# Generic Calculation Function\n",
-    "\n",
     "def calculate_npv_for_all(security_manager: SecurityManager, scenario_manager: ScenarioManager) -> pd.DataFrame:\n",
     "    data_store = []\n",
     "    for (scenario_name, scenario_date), scenario in scenario_manager.scenarios.items():\n",
@@ -262,58 +285,59 @@
     "                logging.error(f\"Error calculating NPV for Security: {security_id}, Scenario: {scenario_name}. Error: {e}\")\n",
     "    return pd.DataFrame(data_store)\n",
     "\n",
-    "\n",
     "# Task Dispatcher\n",
-    "\n",
+    "from os import path\n",
     "class TaskDispatcher:\n",
     "    def __init__(self, config_file: str):\n",
     "        with open(config_file, 'r') as f:\n",
     "            self.config = json.load(f)\n",
+    "        self.wk_folder = path.dirname(config_file)\n",
+    "        self.valuation_date = datetime.strptime(self.config[\"valuation_date\"], \"%Y-%m-%d\")\n",
     "        self.curve_manager = CurveManager()\n",
+    "        self.curve_manager.set_valuation_date(self.valuation_date)\n",
     "        self.scenario_manager = ScenarioManager()\n",
+    "        self.scenario_manager.set_valuation_date(self.valuation_date)\n",
     "        self.security_manager = SecurityManager()\n",
+    "        self.security_manager.set_valuation_date(self.valuation_date)\n",
+    "\n",
+    "    def load_curves(self):\n",
+    "        curve_file = self.config[\"curve_definition_file\"]\n",
+    "        self.curve_manager.read_curves_from_csv(path.join(self.wk_folder, curve_file))\n",
     "\n",
     "    def load_scenarios(self):\n",
     "        scenario_file = self.config[\"scenario_definition_file\"]\n",
-    "        scenarios_data = pd.read_csv(scenario_file)\n",
-    "        for _, row in scenarios_data.iterrows():\n",
-    "            self.scenario_manager.create_scenario(row[\"scenario_name\"], datetime.strptime(row[\"scenario_date\"], \"%Y-%m-%d\"))\n",
+    "        self.scenario_manager.load_scenarios(path.join(self.wk_folder, scenario_file))\n",
     "\n",
     "    def load_securities(self):\n",
     "        security_file = self.config[\"security_definition_file\"]\n",
-    "        securities_data = pd.read_csv(security_file)\n",
-    "        for _, row in securities_data.iterrows():\n",
-    "            attributes = {\n",
-    "                \"curve_name\": row[\"curve_name\"],\n",
-    "                \"cash_flows\": [\n",
-    "                    (datetime.strptime(d, \"%Y-%m-%d\"), float(a))\n",
-    "                    for d, a in zip(row[\"cash_flow_dates\"].split(\";\"), row[\"cash_flow_amounts\"].split(\";\"))\n",
-    "                ]\n",
-    "            }\n",
-    "            self.security_manager.add_security(Bond(security_id=row[\"security_id\"], attributes=attributes))\n",
+    "        self.security_manager.load_securities(path.join(self.wk_folder, security_file))\n",
     "\n",
     "    def execute_use_case(self):\n",
     "        use_case = self.config[\"use_case\"]\n",
     "        if use_case == \"NPV_CALCULATION\":\n",
     "            results = calculate_npv_for_all(self.security_manager, self.scenario_manager)\n",
-    "            results.to_csv(self.config[\"output_file\"], index=False)\n",
+    "            results.to_csv(path.join(self.wk_folder, self.config[\"output_file\"]), index=False)\n",
     "            logging.info(f\"Results saved to {self.config['output_file']}\")\n",
     "\n",
     "    def run(self):\n",
     "        try:\n",
     "            logging.info(\"Starting Task Dispatcher...\")\n",
     "            self.load_curves()\n",
+    "            logging.info(\"Curves loaded\")\n",
     "            self.load_scenarios()\n",
+    "            logging.info(\"Scenarios loaded\")\n",
     "            self.load_securities()\n",
+    "            logging.info(\"Securities loaded\")\n",
     "            self.execute_use_case()\n",
     "            logging.info(\"Task Dispatcher completed successfully.\")\n",
     "        except Exception as e:\n",
     "            logging.error(f\"Task Dispatcher encountered an error: {e}\")\n",
     "\n",
     "# Example Usage\n",
+    "\n",
     "if __name__ == \"__main__\":\n",
     "    # Path to the configuration file\n",
-    "    config_file = \"config.json\"\n",
+    "    config_file = \"C:/dev/Python/rmds/tests/config.json\"\n",
     "    \n",
     "    # Initialize and run the TaskDispatcher\n",
     "    dispatcher = TaskDispatcher(config_file)\n",
