passed CurveManager and ScenarioManager, missing security input

--- a/rmds.ipynb
+++ b/rmds.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,23 +52,31 @@
     "    level=logging.INFO,\n",
     ")\n",
     "'''\n",
-    "logging.basicConfig(stream=sys.stdout, level=logging.INFO, format='%(asctime)s %(levelname)s %(name)s %(process)d: %(message)s')\n",
-    "\n",
+    "logging.basicConfig(stream=sys.stdout, level=logging.INFO, format='%(asctime)s %(levelname)s %(name)s %(process)d: %(message)s')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Abstract Classes and Singleton Managers\n",
     "class Curve:\n",
     "    \"\"\"Abstract base class for a curve.\"\"\"\n",
-    "    def __init__(self, name: str, dates: List[datetime], values: List[float]):\n",
+    "    # concrete method to initialize meta data for the curve\n",
+    "    def __init__(self, name: str, date:datetime):\n",
     "        self.name = name\n",
-    "        self.dates = dates\n",
-    "        self.values = values\n",
+    "        self.date = date\n",
     "\n",
     "    @abstractmethod\n",
-    "    def get_value(self, date: datetime) -> float:\n",
+    "    def get_value(self, date: int) -> float:\n",
     "        pass\n",
     "\n",
     "class SimpleCurve(Curve):\n",
     "    \"\"\"A simple curve with linear interpolation.\"\"\"\n",
-    "    def __init__(self, dates: int, values: float):\n",
+    "    def __init__(self, name:str, date:datetime, dates: int, values: float):\n",
+    "        super().__init__(name, date)\n",
     "        self.dates = np.array(dates)\n",
     "        self.values = np.array(values)\n",
     "        self.interpolator = interp1d(self.dates.astype(int), self.values, kind='linear', fill_value=\"extrapolate\")\n",
@@ -108,34 +116,39 @@
     "            cls._instance.curves = {}\n",
     "        return cls._instance\n",
     "\n",
-    "    def set_valuation_date(self, valuation_date):\n",
+    "    def set_valuation_date(self, valuation_date: datetime):\n",
     "        self.valuation_date = valuation_date\n",
     "\n",
+    "    # use read_curves_from_csv instead\n",
     "    def load_curves(self, curve_file):\n",
     "        curves_data = pd.read_csv(curve_file)\n",
     "        for _, row in curves_data.iterrows():\n",
     "            dates = [datetime.strptime(d, \"%Y-%m-%d\") for d in row[\"dates\"].split(\";\")]\n",
     "            values = [float(v) for v in row[\"values\"].split(\";\")]\n",
-    "            self.add_curve(SimpleCurve(name=row[\"curve_name\"], dates=dates, values=values))\n",
+    "            self.add_curve(SimpleCurve(name=row[\"curve_name\"], date=self.valuation_date, dates=dates, values=values))\n",
     "\n",
     "    def read_curves_from_csv(self, file_path):\n",
     "        try:\n",
     "            with open(file_path, 'r') as file:\n",
     "                reader = csv.reader(file)\n",
     "                curve_name = None\n",
+    "                curve_date = self.valuation_date\n",
+    "                curve_type = None\n",
     "                dates = []\n",
     "                values = []\n",
     "\n",
     "                for row in reader:\n",
     "                    if not row:  # Blank row indicates end of current curve\n",
     "                        if curve_name and dates and values:\n",
-    "                            curve = SimpleCurve(dates, values)\n",
-    "                            self.add_curve(curve_name, dates[0], curve)\n",
+    "                            curve = SimpleCurve(curve_name, curve_date, dates, values)\n",
+    "                            self.add_curve(curve)\n",
     "                            curve_name = None\n",
     "                            dates = []\n",
     "                            values = []\n",
     "                    elif curve_name is None:  # Header row containing curve name\n",
     "                        curve_name = row[0]\n",
+    "                        curve_date = row[1]\n",
+    "                        curve_type = row[2]\n",
     "                    else:  # Data rows containing <date, discount factor>\n",
     "                        date = int(row[0])\n",
     "                        value = float(row[1])\n",
@@ -144,8 +157,8 @@
     "\n",
     "                # Add the last curve if the file doesn't end with a blank row\n",
     "                if curve_name and dates and values:\n",
-    "                    curve = SimpleCurve(dates, values)\n",
-    "                    self.add_curve(curve_name, dates[0], curve)\n",
+    "                    curve = SimpleCurve(curve_name, curve_date, dates, values)\n",
+    "                    self.add_curve(curve)\n",
     "                    \n",
     "            logging.info(f\"Successfully read and added curves from CSV: {file_path}\")\n",
     "\n",
@@ -154,14 +167,21 @@
     "            raise\n",
     "\n",
     "    def add_curve(self, curve: Curve):\n",
-    "        key = (curve.name,)\n",
+    "        key = (curve.name,curve.date)\n",
     "        self.curves[key] = curve\n",
     "        logging.info(f\"Added curve: {curve.name}\")\n",
     "\n",
-    "    def get_curve(self, name: str) -> Optional[Curve]:\n",
-    "        return self.curves.get((name,))\n",
-    "\n",
-    "\n",
+    "    def get_curve(self, name: str, date:datetime) -> Optional[Curve]:\n",
+    "        return self.curves.get((name,date))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class Scenario:\n",
     "    \"\"\"Class representing a market scenario with BASE, UP, and DOWN perturbed curves.\"\"\"\n",
     "    def __init__(self, name: str, date: datetime, base_curves: Dict[Tuple[str], Curve]):\n",
@@ -177,8 +197,8 @@
     "        for key, curve in self.base_curves.items():\n",
     "            up_values = [v * 1.1 for v in curve.values]\n",
     "            down_values = [v * 0.9 for v in curve.values]\n",
-    "            self.up_curves[key] = SimpleCurve(curve.name, curve.dates, up_values)\n",
-    "            self.down_curves[key] = SimpleCurve(curve.name, curve.dates, down_values)\n",
+    "            self.up_curves[key] = SimpleCurve(curve.name, curve.date, curve.dates, up_values)\n",
+    "            self.down_curves[key] = SimpleCurve(curve.name, curve.date, curve.dates, down_values)\n",
     "\n",
     "\n",
     "class ScenarioManager:\n",
@@ -204,8 +224,16 @@
     "    def load_scenarios(self, scenario_file):\n",
     "        # just the BASE for now\n",
     "        # scenarios_data = pd.read_csv(scenario_file)\n",
-    "        self.create_scenario(\"BASE\", self.valuation_date)\n",
-    "\n",
+    "        logging.info(f\"Start loading scenarios: first the BASE curves\")\n",
+    "        self.create_scenario(\"BASE\", self.valuation_date)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class Security(ABC):\n",
     "    \"\"\"Abstract class for a financial security.\"\"\"\n",
     "    def __init__(self, security_id: str, attributes: Dict[str, Union[str, float, int]]):\n",
@@ -262,7 +290,15 @@
     "                ]\n",
     "            }\n",
     "            self.add_security(Bond(security_id=row[\"security_id\"], attributes=attributes))\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Generic Calculation Function\n",
     "def calculate_npv_for_all(security_manager: SecurityManager, scenario_manager: ScenarioManager) -> pd.DataFrame:\n",
     "    data_store = []\n",
