--- a/rmds.ipynb
+++ b/rmds.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,12 +121,15 @@
     "\n",
     "    # use read_curves_from_csv instead\n",
     "    def load_curves(self, curve_file):\n",
+    "        self.read_curves_from_csv(curve_file)\n",
+    "        '''\n",
     "        curves_data = pd.read_csv(curve_file)\n",
     "        for _, row in curves_data.iterrows():\n",
     "            dates = [datetime.strptime(d, \"%Y-%m-%d\") for d in row[\"dates\"].split(\";\")]\n",
     "            values = [float(v) for v in row[\"values\"].split(\";\")]\n",
     "            self.add_curve(SimpleCurve(name=row[\"curve_name\"], date=self.valuation_date, dates=dates, values=values))\n",
-    "\n",
+    "        '''\n",
+    "        \n",
     "    def read_curves_from_csv(self, file_path):\n",
     "        try:\n",
     "            with open(file_path, 'r') as file:\n",
@@ -147,7 +150,7 @@
     "                            values = []\n",
     "                    elif curve_name is None:  # Header row containing curve name\n",
     "                        curve_name = row[0]\n",
-    "                        curve_date = row[1]\n",
+    "                        curve_date = datetime.strptime(row[1], '%Y%m%d')\n",
     "                        curve_type = row[2]\n",
     "                    else:  # Data rows containing <date, discount factor>\n",
     "                        date = int(row[0])\n",
@@ -178,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,6 +242,11 @@
     "    def __init__(self, security_id: str, attributes: Dict[str, Union[str, float, int]]):\n",
     "        self.security_id = security_id\n",
     "        self.attributes = attributes\n",
+    "        self.setup_security()\n",
+    "\n",
+    "    @abstractmethod\n",
+    "    def setup_security(self):\n",
+    "        pass\n",
     "\n",
     "    @abstractmethod\n",
     "    def NPV(self, scenario: Scenario) -> float:\n",
@@ -247,20 +255,40 @@
     "\n",
     "class Bond(Security):\n",
     "    \"\"\"A simple bond implementation.\"\"\"\n",
+    "    def __init__(self, security_id, attributes):\n",
+    "        super().__init__(security_id, attributes)\n",
+    "\n",
+    "    def setup_security(self):\n",
+    "        self.cashflow_dates = [1, 5, 7]\n",
+    "        self.cashflor_values = [100,120,100100]\n",
+    "\n",
     "    def NPV(self, scenario: Scenario) -> float:\n",
-    "        curve_key = (self.attributes[\"curve_name\"],)\n",
-    "        base_curve = scenario.base_curves.get(curve_key)\n",
+    "        curve_name = (self.attributes[\"DiscountCurve\"],)\n",
+    "        base_curve = scenario.base_curves.get(curve_name, scenario.date)\n",
     "\n",
     "        if not base_curve:\n",
-    "            raise ValueError(f\"Curve {curve_key} not found in scenario.\")\n",
+    "            raise ValueError(f\"Curve {curve_name} not found in scenario.\")\n",
     "\n",
-    "        cash_flows = self.attributes[\"cash_flows\"]\n",
     "        npv = 0.0\n",
-    "        for cash_flow_date, cash_flow_amount in cash_flows:\n",
-    "            discount_factor = base_curve.get_value(cash_flow_date)\n",
-    "            npv += cash_flow_amount / (1 + discount_factor)\n",
+    "        for i in range(0,2):\n",
+    "            discount_factor = base_curve.get_value(self.cashflow_dates[i])\n",
+    "            npv += self.cashflor_values[i] * discount_factor\n",
     "        return npv\n",
     "\n",
+    "class Equity(Security):\n",
+    "    def __init__(self, security_id, attributes):\n",
+    "        super().__init__(security_id, attributes)\n",
+    "\n",
+    "    def setup_security(self):\n",
+    "        pass\n",
+    "\n",
+    "    def NPV(self, scenario: Scenario) -> float:\n",
+    "        # Implement equity-specific NPV calculation\n",
+    "        npv = 0\n",
+    "        for curve_name, curve in scenario.base_curves.items():\n",
+    "            # Custom logic for NPV calculation for equities\n",
+    "            npv += sum(curve.values)  # Simplified example\n",
+    "        return npv\n",
     "\n",
     "class SecurityManager:\n",
     "    \"\"\"Singleton class managing securities.\"\"\"\n",
@@ -279,7 +307,41 @@
     "        self.securities[security.security_id] = security\n",
     "        logging.info(f\"Added security: {security.security_id}\")\n",
     "\n",
+    "    def construct_and_add_security(self, attributes: dict) -> int:\n",
+    "        security_type = attributes.pop(\"SecType\", None)\n",
+    "        security_id = attributes.get(\"SecId\")\n",
+    "\n",
+    "        if security_type == \"Bond\":\n",
+    "            security = Bond(security_id, attributes)\n",
+    "        elif security_type == \"equity\":\n",
+    "            security = Equity(security_id, attributes)\n",
+    "        else:\n",
+    "            logging.error(f\"Unknown security type: {security_type}\")\n",
+    "            return -1\n",
+    "\n",
+    "        self.add_security(security)\n",
+    "        logging.info(f\"Constructed and added security of type {security_type}: {security_id}\")\n",
+    "        return 0\n",
+    "\n",
+    "    def read_securities_from_tsv(self, file_path):\n",
+    "        cnt1 = int(0)\n",
+    "        cnt2 = int(0)\n",
+    "        try:\n",
+    "            with open(file_path, 'r') as file:\n",
+    "                reader = csv.DictReader(file, delimiter='\\t')\n",
+    "                for row in reader:\n",
+    "                    attributes = dict(row)\n",
+    "                    cnt2 += self.construct_and_add_security(attributes)\n",
+    "                    cnt1 += 1\n",
+    "\n",
+    "            logging.info(f\"Successfully read {cnt1} rows and added {cnt1+cnt2} securities from TSV: {file_path}\")\n",
+    "        except Exception as e:\n",
+    "            logging.error(f\"Error reading securities from TSV file {file_path}: {e}\")\n",
+    "            raise\n",
+    "\n",
     "    def load_securities(self, security_file):\n",
+    "        self.read_securities_from_tsv(security_file)\n",
+    "        '''\n",
     "        securities_data = pd.read_csv(security_file)\n",
     "        for _, row in securities_data.iterrows():\n",
     "            attributes = {\n",
@@ -290,14 +352,47 @@
     "                ]\n",
     "            }\n",
     "            self.add_security(Bond(security_id=row[\"security_id\"], attributes=attributes))\n",
+    "        '''\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-12-10 21:20:56,408 INFO root 3448: Starting Task Dispatcher...\n",
+      "2024-12-10 21:20:56,411 INFO root 3448: Added curve: OIS.USD\n",
+      "2024-12-10 21:20:56,413 INFO root 3448: Added curve: OIS_LIBOR.USD\n",
+      "2024-12-10 21:20:56,414 INFO root 3448: Successfully read and added curves from CSV: C:/dev/Python/rmds/tests\\curves.csv\n",
+      "2024-12-10 21:20:56,414 INFO root 3448: Curves loaded\n",
+      "2024-12-10 21:20:56,415 INFO root 3448: Start loading scenarios: first the BASE curves\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-12-10 21:20:56,419 INFO root 3448: Created scenario: BASE on 2024-06-30 00:00:00\n",
+      "2024-12-10 21:20:56,422 INFO root 3448: Scenarios loaded\n",
+      "2024-12-10 21:20:56,427 INFO root 3448: Added security: 3480191_0\n",
+      "2024-12-10 21:20:56,430 INFO root 3448: Constructed and added security of type Bond: 3480191_0\n",
+      "2024-12-10 21:20:56,431 ERROR root 3448: Unknown security type: FloatBond\n",
+      "2024-12-10 21:20:56,432 ERROR root 3448: Unknown security type: MFixedLeg\n",
+      "2024-12-10 21:20:56,433 ERROR root 3448: Unknown security type: MFloatLeg\n",
+      "2024-12-10 21:20:56,434 ERROR root 3448: Unknown security type: MFixedLeg\n",
+      "2024-12-10 21:20:56,434 INFO root 3448: Successfully read 5 rows and added 1 securities from TSV: C:/dev/Python/rmds/tests\\securities.tsv\n",
+      "2024-12-10 21:20:56,435 INFO root 3448: Securities loaded\n",
+      "2024-12-10 21:20:56,436 ERROR root 3448: Error calculating NPV for Security: 3480191_0, Scenario: BASE. Error: 'datetime.datetime' object has no attribute 'get_value'\n",
+      "2024-12-10 21:20:56,439 INFO root 3448: Results saved to results.csv\n",
+      "2024-12-10 21:20:56,440 INFO root 3448: Task Dispatcher completed successfully.\n"
+     ]
+    }
+   ],
    "source": [
     "# Generic Calculation Function\n",
     "def calculate_npv_for_all(security_manager: SecurityManager, scenario_manager: ScenarioManager) -> pd.DataFrame:\n",
@@ -338,7 +433,7 @@
     "\n",
     "    def load_curves(self):\n",
     "        curve_file = self.config[\"curve_definition_file\"]\n",
-    "        self.curve_manager.read_curves_from_csv(path.join(self.wk_folder, curve_file))\n",
+    "        self.curve_manager.load_curves(path.join(self.wk_folder, curve_file))\n",
     "\n",
     "    def load_scenarios(self):\n",
     "        scenario_file = self.config[\"scenario_definition_file\"]\n",
