re-based to make it portable

--- a/rmds.ipynb
+++ b/rmds.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,38 +358,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-12-10 21:20:56,408 INFO root 3448: Starting Task Dispatcher...\n",
-      "2024-12-10 21:20:56,411 INFO root 3448: Added curve: OIS.USD\n",
-      "2024-12-10 21:20:56,413 INFO root 3448: Added curve: OIS_LIBOR.USD\n",
-      "2024-12-10 21:20:56,414 INFO root 3448: Successfully read and added curves from CSV: C:/dev/Python/rmds/tests\\curves.csv\n",
-      "2024-12-10 21:20:56,414 INFO root 3448: Curves loaded\n",
-      "2024-12-10 21:20:56,415 INFO root 3448: Start loading scenarios: first the BASE curves\n"
+      "2024-12-13 11:07:50,339 INFO root 34832: Starting Task Dispatcher...\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-12-10 21:20:56,419 INFO root 3448: Created scenario: BASE on 2024-06-30 00:00:00\n",
-      "2024-12-10 21:20:56,422 INFO root 3448: Scenarios loaded\n",
-      "2024-12-10 21:20:56,427 INFO root 3448: Added security: 3480191_0\n",
-      "2024-12-10 21:20:56,430 INFO root 3448: Constructed and added security of type Bond: 3480191_0\n",
-      "2024-12-10 21:20:56,431 ERROR root 3448: Unknown security type: FloatBond\n",
-      "2024-12-10 21:20:56,432 ERROR root 3448: Unknown security type: MFixedLeg\n",
-      "2024-12-10 21:20:56,433 ERROR root 3448: Unknown security type: MFloatLeg\n",
-      "2024-12-10 21:20:56,434 ERROR root 3448: Unknown security type: MFixedLeg\n",
-      "2024-12-10 21:20:56,434 INFO root 3448: Successfully read 5 rows and added 1 securities from TSV: C:/dev/Python/rmds/tests\\securities.tsv\n",
-      "2024-12-10 21:20:56,435 INFO root 3448: Securities loaded\n",
-      "2024-12-10 21:20:56,436 ERROR root 3448: Error calculating NPV for Security: 3480191_0, Scenario: BASE. Error: 'datetime.datetime' object has no attribute 'get_value'\n",
-      "2024-12-10 21:20:56,439 INFO root 3448: Results saved to results.csv\n",
-      "2024-12-10 21:20:56,440 INFO root 3448: Task Dispatcher completed successfully.\n"
+      "2024-12-13 11:07:50,339 INFO root 34832: Added curve: OIS.USD\n",
+      "2024-12-13 11:07:50,344 INFO root 34832: Added curve: OIS_LIBOR.USD\n",
+      "2024-12-13 11:07:50,344 INFO root 34832: Successfully read and added curves from CSV: ./tests\\curves.csv\n",
+      "2024-12-13 11:07:50,344 INFO root 34832: Curves loaded\n",
+      "2024-12-13 11:07:50,348 INFO root 34832: Start loading scenarios: first the BASE curves\n",
+      "2024-12-13 11:07:50,349 INFO root 34832: Created scenario: BASE on 2024-06-30 00:00:00\n",
+      "2024-12-13 11:07:50,350 INFO root 34832: Scenarios loaded\n",
+      "2024-12-13 11:07:50,353 INFO root 34832: Added security: 3480191_0\n",
+      "2024-12-13 11:07:50,354 INFO root 34832: Constructed and added security of type Bond: 3480191_0\n",
+      "2024-12-13 11:07:50,355 ERROR root 34832: Unknown security type: FloatBond\n",
+      "2024-12-13 11:07:50,355 ERROR root 34832: Unknown security type: MFixedLeg\n",
+      "2024-12-13 11:07:50,356 ERROR root 34832: Unknown security type: MFloatLeg\n",
+      "2024-12-13 11:07:50,356 ERROR root 34832: Unknown security type: MFixedLeg\n",
+      "2024-12-13 11:07:50,357 INFO root 34832: Successfully read 5 rows and added 1 securities from TSV: ./tests\\securities.tsv\n",
+      "2024-12-13 11:07:50,358 INFO root 34832: Securities loaded\n",
+      "2024-12-13 11:07:50,359 ERROR root 34832: Error calculating NPV for Security: 3480191_0, Scenario: BASE. Error: 'datetime.datetime' object has no attribute 'get_value'\n",
+      "2024-12-13 11:07:50,367 INFO root 34832: Results saved to results.csv\n",
+      "2024-12-13 11:07:50,369 INFO root 34832: Task Dispatcher completed successfully.\n"
      ]
     }
    ],
@@ -468,7 +468,7 @@
     "\n",
     "if __name__ == \"__main__\":\n",
     "    # Path to the configuration file\n",
-    "    config_file = \"C:/dev/Python/rmds/tests/config.json\"\n",
+    "    config_file = \"./tests/config.json\"\n",
     "    \n",
     "    # Initialize and run the TaskDispatcher\n",
     "    dispatcher = TaskDispatcher(config_file)\n",
@@ -493,7 +493,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
