--- a/rmds.ipynb
+++ b/rmds.ipynb
@@ -3,6 +3,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## The Risk Measure DataSet generation engine codebase\n",
     "\n",
@@ -21,6 +26,15 @@
     "6.\tAnd one more item and most important to complete the picture: *info logging*! we now need a logger through the code so that each step is logged and if there is any exception, error messages are captured into the log. \n",
     "\n",
     "This file is the *architectural design master* document, also the POC."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime "
    ]
   },
   {
@@ -493,7 +507,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
